[gd_scene load_steps=14 format=3 uid="uid://bcolebumo6sc4"]

[ext_resource type="Theme" uid="uid://b16koxg7l8p3u" path="res://Assets/Themes/main_theme.tres" id="1_2trgx"]
[ext_resource type="Script" uid="uid://b3hejakvhamb1" path="res://Assets/Scripts/main_interface.gd" id="2_4nexr"]
[ext_resource type="Texture2D" uid="uid://dmebb61o1hv8p" path="res://Assets/Images/FluffyDev_logo.png" id="2_ilk0r"]
[ext_resource type="Theme" uid="uid://3vmvkpfapxqp" path="res://Assets/Themes/filedialog_theme.tres" id="3_4wk1m"]
[ext_resource type="AudioStream" uid="uid://0qccoyxyr0oe" path="res://Assets/Audio/awwman.ogg" id="3_23lk6"]
[ext_resource type="Texture2D" uid="uid://urrbute3jjrk" path="res://Assets/Images/godot_logo.png" id="3_304b1"]
[ext_resource type="Script" uid="uid://crsedvt2ysxei" path="res://Assets/Scripts/fluffylogo.gd" id="4_4nexr"]
[ext_resource type="FontFile" uid="uid://cw4qxdktair22" path="res://Assets/Fonts/ProFontIIxNerdFontMono-Regular.ttf" id="5_bortl"]
[ext_resource type="FontFile" uid="uid://b0sme10xxf33t" path="res://Assets/Fonts/PerfectDosVga.ttf" id="6_5w706"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w706"]
bg_color = Color(0.033610415, 0.033610415, 0.033610415, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.61506337, 0.00027732938, 0.61505896, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_304b1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4nexr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nexr"]
bg_color = Color(0, 0, 0, 0.43137255)

[node name="MainInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_4nexr")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_23lk6")

[node name="backgroundborder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3965705, 0.000107764754, 0.39656758, 1)

[node name="filedialog" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileDialog" type="FileDialog" parent="filedialog"]
transparent_bg = true
oversampling_override = 1.0
title = "Save Modlist to File"
initial_position = 1
size = Vector2i(1186, 416)
unresizable = true
always_on_top = true
transparent = true
theme = ExtResource("3_4wk1m")
display_mode = 1
access = 2
file_filter_toggle_enabled = false
file_sort_options_enabled = false
layout_toggle_enabled = false

[node name="missingmods" type="Control" parent="filedialog"]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -290.0
offset_right = 462.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2trgx")

[node name="missingmodspanel" type="Panel" parent="filedialog/missingmods"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5w706")

[node name="MarginContainer" type="MarginContainer" parent="filedialog/missingmods/missingmodspanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BoxContainer2" type="BoxContainer" parent="filedialog/missingmods/missingmodspanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="filedialog/missingmods/missingmodspanel/MarginContainer/BoxContainer2"]
custom_minimum_size = Vector2(0, 45.944)
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Panel" type="Panel" parent="filedialog/missingmods/missingmodspanel/MarginContainer/BoxContainer2/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="filedialog/missingmods/missingmodspanel/MarginContainer/BoxContainer2/BoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 27
text = "These Mods couldn't be Found"
horizontal_alignment = 1
vertical_alignment = 1

[node name="close" type="Button" parent="filedialog/missingmods/missingmodspanel/MarginContainer/BoxContainer2/BoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_bortl")
theme_override_font_sizes/font_size = 30
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="filedialog/missingmods/missingmodspanel/MarginContainer/BoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="missingmodsbox" type="BoxContainer" parent="filedialog/missingmods/missingmodspanel/MarginContainer/BoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.0050000004
anchor_right = 0.99700004
anchor_bottom = 0.99500006
offset_left = -0.4560001
offset_top = -0.24000025
offset_right = 0.45593262
offset_bottom = 0.2399292
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2trgx")
color = Color(0, 0, 0, 1)

[node name="BoxContainer" type="BoxContainer" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.002
anchor_top = 0.003
anchor_right = 0.998
anchor_bottom = 0.003
offset_left = -0.26800013
offset_top = 0.110000014
offset_right = 0.26794434
offset_bottom = 48.11
grow_horizontal = 2

[node name="settingsMenu" type="MenuButton" parent="background/BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_bortl")
text = " Settings "
flat = false
item_count = 2
popup/item_0/text = " Configuration"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = " Don't Click This"
popup/item_1/id = 1

[node name="modlistMenu" type="MenuButton" parent="background/BoxContainer"]
layout_mode = 2
tooltip_text = "Saving and loading of Saved Modlists"
theme_override_fonts/font = ExtResource("5_bortl")
text = " Modlist "
flat = false
item_count = 2
popup/item_0/text = " Save"
popup/item_0/id = 0
popup/item_1/text = " Load"
popup/item_1/id = 1

[node name="exit" type="Button" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9990001
anchor_top = 0.002
anchor_right = 0.9990001
anchor_bottom = 0.002
offset_left = -69.854126
offset_top = -0.28400004
offset_right = 0.14587402
offset_bottom = 48.716
grow_horizontal = 0
tooltip_text = "I will miss you :c"
theme_override_fonts/font = ExtResource("5_bortl")
theme_override_font_sizes/font_size = 30
text = " Exit "

[node name="StatusBar" type="BoxContainer" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.95500004
anchor_right = 0.99700004
anchor_bottom = 0.99500006
offset_left = 0.56200004
offset_top = -0.11004639
offset_right = -2.5620117
offset_bottom = 0.20996094
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="left" type="BoxContainer" parent="background/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ApplicationName" type="Label" parent="background/StatusBar/left"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Door Kickers 2 Modlist Manager"
horizontal_alignment = 1
vertical_alignment = 1

[node name="right" type="BoxContainer" parent="background/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="ModInfo" type="Panel" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.095000006
anchor_right = 0.81200004
anchor_bottom = 0.938
offset_left = 0.12400007
offset_top = 0.009994507
offset_right = 0.447937
offset_bottom = -0.19604492

[node name="BoxContainer" type="BoxContainer" parent="background/ModInfo"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Disabled" type="Panel" parent="background/ModInfo/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="background/ModInfo/BoxContainer/Disabled"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="background/ModInfo/BoxContainer/Disabled/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="background/ModInfo/BoxContainer/Disabled/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 19
text = "Disabled Mods"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="background/ModInfo/BoxContainer/Disabled/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
vertical = true

[node name="disabledLocal" type="CheckButton" parent="background/ModInfo/BoxContainer/Disabled/BoxContainer/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Hide Local Mods"
alignment = 1

[node name="disabledWorkshop" type="CheckButton" parent="background/ModInfo/BoxContainer/Disabled/BoxContainer/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Hide Workshop Mods"
alignment = 1

[node name="disabledSearch" type="LineEdit" parent="background/ModInfo/BoxContainer/Disabled/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 19
placeholder_text = "Search"
alignment = 1
clear_button_enabled = true

[node name="Panel" type="Panel" parent="background/ModInfo/BoxContainer/Disabled/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="background/ModInfo/BoxContainer/Disabled/BoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="disabledmods" type="BoxContainer" parent="background/ModInfo/BoxContainer/Disabled/BoxContainer/Panel/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 0
vertical = true

[node name="Enabled" type="Panel" parent="background/ModInfo/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="background/ModInfo/BoxContainer/Enabled"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="background/ModInfo/BoxContainer/Enabled/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="background/ModInfo/BoxContainer/Enabled/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 19
text = "Enabled Mods"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="background/ModInfo/BoxContainer/Enabled/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
vertical = true

[node name="enabledLocal" type="CheckButton" parent="background/ModInfo/BoxContainer/Enabled/BoxContainer/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Hide Local Mods"
alignment = 1

[node name="enabledWorkshop" type="CheckButton" parent="background/ModInfo/BoxContainer/Enabled/BoxContainer/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Hide Workshop Mods"
alignment = 1

[node name="enabledSearch" type="LineEdit" parent="background/ModInfo/BoxContainer/Enabled/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 19
placeholder_text = "Search"
alignment = 1
clear_button_enabled = true

[node name="Panel" type="Panel" parent="background/ModInfo/BoxContainer/Enabled/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="background/ModInfo/BoxContainer/Enabled/BoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="enabledmods" type="BoxContainer" parent="background/ModInfo/BoxContainer/Enabled/BoxContainer/Panel/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 0
vertical = true

[node name="Buttons" type="Panel" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.81700003
anchor_top = 0.095000006
anchor_right = 0.99500006
anchor_bottom = 0.855
offset_left = 0.38537598
offset_top = 0.009994507
offset_right = -0.27001953
offset_bottom = 0.08996582
grow_horizontal = 0
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="background/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013
anchor_top = 0.006
anchor_right = 0.98700005
anchor_bottom = 0.994
offset_left = 3.0622618
offset_top = 3.0512848
offset_right = -3.062271
offset_bottom = -3.0512695
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="background/Buttons/BoxContainer"]
layout_mode = 2
vertical = true

[node name="reloadmods" type="Button" parent="background/Buttons/BoxContainer/BoxContainer"]
layout_mode = 2
tooltip_text = "Repopulates both Lists"
theme_override_fonts/font = ExtResource("6_5w706")
theme_override_font_sizes/font_size = 19
text = "Reload Mods"

[node name="unloadall" type="Button" parent="background/Buttons/BoxContainer/BoxContainer"]
layout_mode = 2
tooltip_text = "Will empty the Enabled List."
theme_override_fonts/font = ExtResource("6_5w706")
theme_override_font_sizes/font_size = 19
text = "Unload All"

[node name="openappdata" type="Button" parent="background/Buttons/BoxContainer/BoxContainer"]
layout_mode = 2
tooltip_text = "Will empty the Enabled List."
theme_override_fonts/font = ExtResource("6_5w706")
theme_override_font_sizes/font_size = 19
text = "Open Appdata
Folder"

[node name="openmodsupload" type="Button" parent="background/Buttons/BoxContainer/BoxContainer"]
layout_mode = 2
tooltip_text = "Will empty the Enabled List."
theme_override_fonts/font = ExtResource("6_5w706")
theme_override_font_sizes/font_size = 19
text = "Open Mods Upload
Folder"

[node name="HSeparator" type="HSeparator" parent="background/Buttons/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_304b1")

[node name="BoxContainer2" type="BoxContainer" parent="background/Buttons/BoxContainer"]
layout_mode = 2
vertical = true

[node name="apply" type="Button" parent="background/Buttons/BoxContainer/BoxContainer2"]
layout_mode = 2
tooltip_text = "Apply the current list to the Options XML"
theme_override_fonts/font = ExtResource("6_5w706")
theme_override_font_sizes/font_size = 19
text = "Apply Modlist"

[node name="nomodlaunch" type="Button" parent="background/Buttons/BoxContainer/BoxContainer2"]
layout_mode = 2
tooltip_text = "Launch Doorkickers 2 without any Mods.

CAUTION will clear out loaded mods in the Options XML"
theme_override_fonts/font = ExtResource("6_5w706")
theme_override_font_sizes/font_size = 19
text = "Launch without Mods"

[node name="launch" type="Button" parent="background/Buttons/BoxContainer/BoxContainer2"]
layout_mode = 2
tooltip_text = "Apply the Modlist then Launch Doorkickers 2 on Steam"
theme_override_fonts/font = ExtResource("6_5w706")
theme_override_font_sizes/font_size = 19
text = "Apply and Launch
DoorKickers 2"

[node name="fluffylogo" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.855
anchor_top = 0.86800003
anchor_right = 0.92600006
anchor_bottom = 0.994
offset_left = 0.16998291
offset_top = -0.25604248
offset_right = -0.19604492
offset_bottom = -0.14801025
texture = ExtResource("2_ilk0r")
expand_mode = 2
stretch_mode = 4
script = ExtResource("4_4nexr")

[node name="Button" type="Button" parent="background/fluffylogo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_4nexr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4nexr")
theme_override_styles/hover = SubResource("StyleBoxFlat_4nexr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4nexr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4nexr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4nexr")

[node name="textbox" type="Control" parent="background/fluffylogo"]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -45.0
offset_right = 247.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="background/fluffylogo/textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="1" type="RichTextLabel" parent="background/fluffylogo/textbox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Alright, Thats it"
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="RichTextLabel" parent="background/fluffylogo/textbox/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "I have had it upto here with you"
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="RichTextLabel" parent="background/fluffylogo/textbox/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "I cast Light mode User"
horizontal_alignment = 1
vertical_alignment = 1

[node name="4" type="RichTextLabel" parent="background/fluffylogo/textbox/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "How did that feel?
Nerd"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lightmode" type="Control" parent="background/fluffylogo"]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="background/fluffylogo/lightmode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="godotlogo" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92600006
anchor_top = 0.86800003
anchor_right = 0.99700004
anchor_bottom = 0.994
offset_left = -0.19604492
offset_top = -0.25604248
offset_right = -0.5620117
offset_bottom = -0.14801025
texture = ExtResource("3_304b1")
expand_mode = 2
stretch_mode = 4

[connection signal="pressed" from="filedialog/missingmods/missingmodspanel/MarginContainer/BoxContainer2/BoxContainer/close" to="." method="_on_close_missingmods_pressed"]
[connection signal="pressed" from="background/exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="background/ModInfo/BoxContainer/Disabled/BoxContainer/BoxContainer/BoxContainer/disabledLocal" to="." method="_on_disabled_local_toggled"]
[connection signal="toggled" from="background/ModInfo/BoxContainer/Disabled/BoxContainer/BoxContainer/BoxContainer/disabledWorkshop" to="." method="_on_disabled_workshop_toggled"]
[connection signal="text_changed" from="background/ModInfo/BoxContainer/Disabled/BoxContainer/disabledSearch" to="." method="_on_disabled_search_text_changed"]
[connection signal="text_submitted" from="background/ModInfo/BoxContainer/Disabled/BoxContainer/disabledSearch" to="." method="_on_disabled_search_text_submitted"]
[connection signal="toggled" from="background/ModInfo/BoxContainer/Enabled/BoxContainer/BoxContainer/BoxContainer/enabledLocal" to="." method="_on_enabled_local_toggled"]
[connection signal="toggled" from="background/ModInfo/BoxContainer/Enabled/BoxContainer/BoxContainer/BoxContainer/enabledWorkshop" to="." method="_on_enabled_workshop_toggled"]
[connection signal="text_changed" from="background/ModInfo/BoxContainer/Enabled/BoxContainer/enabledSearch" to="." method="_on_enabled_search_text_changed"]
[connection signal="text_submitted" from="background/ModInfo/BoxContainer/Enabled/BoxContainer/enabledSearch" to="." method="_on_enabled_search_text_submitted"]
[connection signal="pressed" from="background/Buttons/BoxContainer/BoxContainer/reloadmods" to="." method="_on_reloadmods_pressed"]
[connection signal="pressed" from="background/Buttons/BoxContainer/BoxContainer/unloadall" to="." method="_on_unloadall_pressed"]
[connection signal="pressed" from="background/Buttons/BoxContainer/BoxContainer/openappdata" to="." method="_on_openappdata_pressed"]
[connection signal="pressed" from="background/Buttons/BoxContainer/BoxContainer/openmodsupload" to="." method="_on_openmodsupload_pressed"]
[connection signal="pressed" from="background/Buttons/BoxContainer/BoxContainer2/apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="background/Buttons/BoxContainer/BoxContainer2/nomodlaunch" to="." method="_on_nomodlaunch_pressed"]
[connection signal="pressed" from="background/Buttons/BoxContainer/BoxContainer2/launch" to="." method="_on_launch_pressed"]
[connection signal="pressed" from="background/fluffylogo/Button" to="background/fluffylogo" method="_on_button_pressed"]
